<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient_background">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/student_image"
            android:layout_width="150dp"
            android:scaleType="centerCrop"
            android:layout_height="150dp"
            android:src="@drawable/user"
            android:layout_marginLeft="20dp"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/black"
            android:layout_centerVertical="true"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7"
            />
        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/student_image"
            android:textSize="25dp"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:layout_marginLeft="11dp"
            />
        <TextView
            android:id="@+id/profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:textSize="15dp"
            android:includeFontPadding="false"
            android:layout_below="@id/student_name"
            android:layout_toRightOf="@id/student_image"
            android:layout_marginLeft="11dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/reg_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/reg_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/father_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label1"
        app:layout_constraintTop_toBottomOf="@+id/label1" />

    <TextView
        android:id="@+id/father"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/father_text"
        app:layout_constraintStart_toStartOf="@+id/reg"
        app:layout_constraintTop_toBottomOf="@+id/reg" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/uni_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label2"
        app:layout_constraintTop_toBottomOf="@+id/label2" />

    <TextView
        android:id="@+id/university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/uni_text"
        app:layout_constraintStart_toStartOf="@+id/father"
        app:layout_constraintTop_toBottomOf="@+id/father" />

    <TextView
        android:id="@+id/label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/course_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label3"
        app:layout_constraintTop_toBottomOf="@+id/label3" />

    <TextView
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/course_text"
        app:layout_constraintStart_toStartOf="@+id/university"
        app:layout_constraintTop_toBottomOf="@+id/university" />

    <TextView
        android:id="@+id/label5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label4"
        app:layout_constraintTop_toBottomOf="@+id/label4" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_text"
        app:layout_constraintStart_toStartOf="@+id/course"
        app:layout_constraintTop_toBottomOf="@+id/course" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob"
        app:srcCompat="@drawable/barcode" />

    <TextView
        android:id="@+id/label6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dep_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label5"
        app:layout_constraintTop_toBottomOf="@+id/label5" />

    <TextView
        android:id="@+id/dep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dep_text"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />
    <TextView
        android:id="@+id/label7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cnic_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label6"
        app:layout_constraintTop_toBottomOf="@+id/label6" />

    <TextView
        android:id="@+id/cnic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cnic_text"
        app:layout_constraintStart_toStartOf="@+id/dep"
        app:layout_constraintTop_toBottomOf="@+id/dep" />
    <TextView
        android:id="@+id/label8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dob_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label7"
        app:layout_constraintTop_toBottomOf="@+id/label7" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dob_text"
        app:layout_constraintStart_toStartOf="@+id/cnic"
        app:layout_constraintTop_toBottomOf="@+id/cnic" />

</androidx.constraintlayout.widget.ConstraintLayout>